Revert "align new description with dark theme; refactoring (#81)"
This reverts commit 5ce0db95040cc131aff4957d225bb6375fdfbb38.

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -381,8 +381,6 @@
 		--yt-spec-suggested-action: var(--hover-background) !important;
 		--yt-spec-outline: var(--hover-background) !important;
 		--yt-spec-brand-button-background: var(--main-color) !important; /*in incognito this may be used as subscribe button but is inconsistent .yt-spec-button-shape-next--brand.yt-spec-button-shape-next--filled*/
-		
-		--yt-formatted-string-bold-color: var(--dimmer-text) !important; /*this affects number of views*/
 	}
 	/*Scrollbar fix for chrome*/
 	*:not([hide-scrollbar]) ::-webkit-scrollbar-thumb
@@ -1064,24 +1062,38 @@
 	}
 
 	/*description and other metadata*/
-	ytd-watch-metadata[modern-metapanel] #description.ytd-watch-metadata
+	.date.ytd-video-secondary-info-renderer, .content.ytd-video-secondary-info-renderer, #title.ytd-metadata-row-renderer,
+	#description-inline-expander > div > span > #formatted-snippet-text > span  /*new description*/
 	{
-		background: var(--second-background) !important;
-		/*--yt-spec-button-chip-background-hover*/
+		color: var(--dimmer-text) !important;
 	}
-	ytd-watch-metadata[clickable-description][description-collapsed] #description.ytd-watch-metadata:hover
+	.content.content-line-height-override.style-scope.ytd-metadata-row-renderer, .content.ytd-metadata-row-header-renderer
 	{
-		background: var(--hover-background) !important;
-		/*--yt-spec-badge-chip-background*/
+		color: var(--main-text) !important;
 	}
-	ytd-watch-metadata[modern-metapanel] #description.ytd-watch-metadata .yt-simple-endpoint.style-scope.yt-formatted-string
+	/*comment border next to new description*/
+	ytd-comments-entry-point-header-renderer:not([modern-metapanel]),
+	ytd-comments-entry-point-header-renderer:not([modern-metapanel]) #header.ytd-comments-entry-point-header-renderer
+	{
+		border-color: var(--hover-background) !important;
+	}
+	/*show more*/
+	.more-button, .less-button,
+	#show-more-button.ytd-ticket-shelf-renderer > div.ytd-ticket-shelf-renderer,
+	#show-less-button.ytd-ticket-shelf-renderer > div.ytd-ticket-shelf-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	.more-button:hover, .less-button:hover,
+	#show-more-button.ytd-ticket-shelf-renderer > div.ytd-ticket-shelf-renderer:hover,
+	#show-less-button.ytd-ticket-shelf-renderer > div.ytd-ticket-shelf-renderer:hover
 	{
 		color: var(--main-color) !important;
 	}
-	/*show more / less*/
-	#expand.ytd-text-inline-expander:hover, #collapse.ytd-text-inline-expander:hover
+	/*section borders*/
+	ytd-video-secondary-info-renderer, ytd-metadata-row-header-renderer[has-divider-line]
 	{
-		color: var(--main-color) !important;
+		border-color: var(--hover-background) !important;
 	}
 
 	/*Recommandation page*/
