--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.0.3
+@version 4.0.4
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -3065,6 +3065,15 @@
 	h2.yt-multi-page-menu-section-renderer /*comments and notifications headers*/
 	{
 		color: var(--main-text) !important;
+	}
+	/*gear icon*/
+	ytd-simple-menu-header-renderer .yt-spec-button-shape-next__icon
+	{
+		color: var(--main-text) !important;
+	}
+	ytd-simple-menu-header-renderer .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--text:hover .yt-spec-button-shape-next__icon
+	{
+		color: var(--main-color) !important;
 	}
 	.metadata.ytd-notification-renderer,
 	.exp-responsive .yt-lockup-tile .yt-lockup-byline /*account settings*/
