--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.0.8
+@version 4.0.9
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -2633,7 +2633,8 @@
 		color: var(--dimmer-text) !important;
 	}
 	/*Links in description and published date for comments*/
-	#content.ytd-expander a, #description.ytd-watch-metadata .yt-core-attributed-string--link-inherit-color
+	#content.ytd-expander a,
+	.yt-core-attributed-string--link-inherit-color .yt-core-attributed-string__link--call-to-action-color
 	{
 		color: var(--main-color) !important;
 		opacity: 0.9;
@@ -2645,7 +2646,7 @@
 		opacity: .8;
 	}
 	#content.ytd-expander a:hover, #published-time-text.ytd-comment-renderer a:hover, #content.ytd-expander #name.ytd-author-comment-badge-renderer:hover,
-	#description.ytd-watch-metadata .yt-core-attributed-string--link-inherit-color:hover
+	.yt-core-attributed-string--link-inherit-color .yt-core-attributed-string__link--call-to-action-color:hover
 	{
 		color: var(--main-color) !important;
 		opacity: 1 !important;
@@ -2653,6 +2654,12 @@
 	#content.ytd-expander #name.ytd-author-comment-badge-renderer
 	{
 		color: var(--main-text) !important;
+	}
+
+	/*video description text*/
+	.yt-core-attributed-string--link-inherit-color
+	{
+		color: var(--dimmer-text) !important;
 	}
 
 	/*Heart icon in comments*/
