--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 4.1.2
+@version 4.1.3
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -731,18 +731,29 @@
 	{
 		color: var(--dimmer-text) !important;
 	}
-	.tab-content.paper-tab, .tab-content.tp-yt-paper-tab
+	.tab-content.paper-tab, .tab-content.tp-yt-paper-tab,
+	.yt-tab-shape-wiz__tab
 	{
 		color: var(--main-text) !important;
 	}
 	paper-tab:hover .tab-content.paper-tab,
-	tp-yt-paper-tab:hover > .tab-content.tp-yt-paper-tab
+	tp-yt-paper-tab:hover > .tab-content.tp-yt-paper-tab,
+	.yt-tab-shape-wiz__tab--tab-selected
 	{
 		color: var(--main-color) !important;
 	}
 	tp-yt-paper-tabs
 	{
 		--paper-tabs-selection-bar-color: var(--main-color) !important;
+	}
+	/* for tab selected */
+	.yt-tab-group-shape-wiz__slider {
+		background-color: var(--main-color) !important;
+	}
+	/* Join button, Sign In, Show Transcript */
+	.yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--outline {
+		color: var(--main-text);
+		background-color: var(--second-background) !important;
 	}
 	/*search*/
 	.input-content.paper-input-container label, .input-content.paper-input-container .paper-input-label,
@@ -1099,7 +1110,8 @@
 		background: var(--hover-background) !important;
 		/*--yt-spec-badge-chip-background*/
 	}
-	ytd-watch-metadata[modern-metapanel] #description.ytd-watch-metadata .yt-simple-endpoint.style-scope.yt-formatted-string
+	ytd-watch-metadata[modern-metapanel] #description.ytd-watch-metadata .yt-simple-endpoint.style-scope.yt-formatted-string,
+	.yt-core-attributed-string__link--call-to-action-color
 	{
 		color: var(--main-color) !important;
 	}
@@ -1392,7 +1404,7 @@
 
 	/*2022 Nov changes*/
 	/*subscribe button*/
-	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled, 
+	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled, /*Show more on home page*/
 	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--outline, /* as of oct 2023 */
 	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal,  /*NOTE: this affects other material buttons - I would say desired effect*/
 	.yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--filled, .yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--filled:hover, /*on shorts*/
@@ -1403,6 +1415,10 @@
 		border-color: var(--second-background) !important;
 		box-shadow: var(--shadow) !important;
 		color: var(--main-text) !important;
+	}
+	/* to fix white corners for .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--filled  */
+	.button-container.ytd-rich-shelf-renderer {
+		background-color: transparent;
 	}
 	/*unsubscribe confirm dialog*/
 	.yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--text
@@ -2322,6 +2338,7 @@
 	#header-text.ytd-voice-search-dialog-renderer,
 	#microphone-label.ytd-voice-search-dialog-renderer,
 	#microphone.ytd-voice-search-dialog-renderer[state="try-again"] #microphone-circle.ytd-voice-search-dialog-renderer yt-icon.ytd-voice-search-dialog-renderer
+	.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--text
 	{
 		color: var(--main-text) !important;
 	}
